[package]
name = "maps-list-tsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3.1"
regex = "1.11.1"
google_maps = { version = "3.8.1", default-features = false, features = [ "geocoding", "distance_matrix", "reqwest" ] }
rust_decimal = "1.37.1"
log = "0.4.27"
env_logger = "0.11.8"
itertools = "0.14.0"
rayon = "1.10.0"
